@@ -4,6 +4,12 @@
 (__)(__)(_)\_) \___)(_) (_)(____)  \/  (____)(___/ (__)   (____)
 
 ===============================================================================
+# Archivist Beta 4                                                            #
+===============================================================================
+- Removed sideboard cards from draw simulation
+- Option labels changed
+
+===============================================================================
 # Archivist Beta 3                                                            #
 ===============================================================================
 - Background loading of cards, deck and libary
